# wellscope_mvp

./: .gitignore  CLAUDE.md  PARQUET_OPTIMIZATION_TICKET.md  README.md  clustering_summary.md  main.py  pyproject.toml  ui_ux_notest.txt
.wellscope_sessions/session_20250829_001750/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_003005/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_003846/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_003858/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_003904/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_003909/: session_metadata.json
.wellscope_sessions/session_20250829_003910/: session_metadata.json
.wellscope_sessions/session_20250829_003913/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_003926/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_004844/: session_data.json  session_metadata.json
.wellscope_sessions/session_20250829_005509/: session_data.json  session_metadata.json
app/: README.md  __init__.py
app/components/: cluster_controls.py  filter_panel.py  (+5 more)
scripts/: analyze_experiment_results.py  clean_pycache.py  experiment_clustering.py
tests/: test_cluster_runner.py  test_filter_inputs.py  test_headers_loader.py  test_join_inputs.py  test_main.py  test_monthly_loader.py  test_production_clustering.py  test_similarity_score.py  test_umap_projector.py  test_vector_builder.py
(+52 files in other folders)
